// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the SearchInput component. Should match snapshot - with search icon. 1`] = `
<div>
  <div
    class="flex items-center"
  >
    <input
      class="pr-20 w-full"
      data-testid="search-input"
      type="text"
      value="test"
    />
    <div
      class="-ml-[4.5rem] flex mr-2"
    >
      <span
        class="my-auto pr-1 bg-white text-2xl text-dial-gray-dark border-dial-gray-dark"
      >
        <svg
          class="cursor-pointer"
          data-testid="clear-icon-button"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
      <span
        class="my-auto pl-1 border-l bg-white text-3xl text-dial-gray-dark border-dial-gray-dark"
      >
        <svg
          class="cursor-pointer"
          data-testid="search-icon-button"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SearchInput component. Should match snapshot - without search icon. 1`] = `
<div>
  <div
    class="flex items-center"
  >
    <input
      class="pr-10 w-full"
      data-testid="search-input"
      type="text"
      value="test"
    />
    <div
      class="-ml-8 flex mr-2"
    >
      <span
        class="my-auto pr-1 bg-white text-2xl text-dial-gray-dark border-dial-gray-dark"
      >
        <svg
          class="cursor-pointer"
          data-testid="clear-icon-button"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
